# dir-syncer

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: file_checker.rs  main.rs  syncer.rs
