[package]
name = "dirsync"
version = "0.1.2"
authors = ["Ray Britton <ray.britton@mubaloo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
clap = "2.33.0"
regex = "1"
log = "0.4.8"
simplelog = "0.7.4"
chrono = "0.4.10"