[package]
name = "dirsync"
version = "0.3.0"
authors = ["Ray Britton <raybritton@gmail.com>"]
edition = "2018"
publish = false
repository = "https://github.com/raybritton/dir-syncer"
description = "Synchronises file contents from one directory to another. Actions sync'd are adding, modifying and deleting of files. \nNote that any files that match the include pattern(s) will be deleted from the destination directory if they are not also in the source directory.\nNote this is not recursive and all files beginning a period/full stop are ignored.\n\nGenerally best to run with -v so a record of files changed is generated."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
clap = "2.33.0"
regex = "1"
log = "0.4.8"
simplelog = "0.7.4"
chrono = "0.4.10"